--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,188 @@
-* {
-  box-sizing: border-box;
+/* Ejercicio Tiendas PAV */
+/* div.container {
+  width: 100%;
+  border: 1px solid gray;
 }
 
-body {
-  margin: 0;
+header,
+footer {
+  padding: 1em;
+  color: white;
+  background-color: black;
+  clear: left;
+  text-align: center;
 }
 
 nav {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  padding: 0.5rem;
-  gap: 0.5rem;
-  border-bottom: solid 1px #aaa;
-  background-color: #eee;
+  float: left;
+  margin: 0;
 }
 
-nav a {
-  display: inline-block;
-  min-width: 9rem;
-  padding: 0.5rem;
-  border-radius: 0.2rem;
-  border: solid 1px #aaa;
-  text-align: center;
-  text-decoration: none;
-  color: #555;
+article {
+  margin-left: 170px;
+  border-left: 1px solid gray;
+  padding: 1em;
+  overflow: hidden;
 }
 
-nav a[aria-current='page'] {
+* {
+  font-family: Verdana, Tahoma, Arial;
+}
+
+#listaArticulos {
+  width: 100%;
+  height: 100%;
+}
+
+#tablaArticulos {
+  margin: 0 auto;
+  border-collapse: separate;
+  border-spacing: 90px 30px;
+  width: 90%;
+}
+
+#tablaArticulos td,
+#tablaArticulos th {
+  height: 40px;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  background-color: #f1f1f1;
+}
+
+nav li a {
+  display: block;
   color: #000;
-  background-color: #d4d4d4;
+  padding: 10px 16px;
+  text-decoration: none;
 }
 
-main {
-  padding: 1rem;
+nav li a:hover {
+  background-color: #555;
+  color: white;
+}
+
+.botonComprar {
+  color: white;
+  border-radius: 4px;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+  background: rgb(28, 184, 65);
+  padding: 7px;
+  border: none;
+  outline: none;
+}
+
+div.imagenArticulo {
+  float: left;
+  width: 40%;
+  overflow: hidden;
+  padding-left: 20px;
+}
+
+div.datosArticulo {
+  font-size: 0.7em;
+  overflow: hidden;
+}
+
+select {
+  width: 80%;
+  padding: 8px 20px;
+  border: none;
+  border-radius: 4px;
+  background-color: #f1f1f1;
+} */
+
+/* Menú principal */
+#nav-principal a {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 2em;
+}
+
+#nav-principal {
+  float: none;
+  display: flex;
+}
+
+/* Ejercicio articulosfamilias */
+.titulo {
+  font-weight: 500;
+  color: #fff;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Helvetica Neue, Arial, Noto Sans, Liberation Sans, sans-serif,
+    Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  font-size: 1.75rem;
+  text-shadow: 1px 1px 2px #000, 0 0 25px #00f, 0 0 5px #00008b;
+  border-bottom: thin solid;
+  border-color: grey;
+  padding-bottom: 0.1em;
+  margin-bottom: 0.5em;
+}
+
+.tabla-articulos {
+  border: 1px solid #dee2e6;
+  width: 80%;
+  margin-bottom: 1rem;
+  margin-left: 10vw;
+  margin-right: 10vw;
+  color: #212529;
+  border-collapse: collapse;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Helvetica Neue, Arial, Noto Sans, Liberation Sans, sans-serif,
+    Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  text-align: left;
+}
+
+.tabla-articulos-head {
+  color: #495057;
+  background-color: #e9ecef;
+  border-color: #dee2e6;
+}
+
+.tabla-articulos-head-row{
+  display: table-row;
+  border-bottom-width: 2px;
+  font-weight: bold;
+}
+
+.tabla-articulos-head-cell{
+  vertical-align: bottom;
+  border-bottom: 2px solid #dee2e6;
+  border: 1px solid #dee2e6;
+  padding: 0.3rem;
+  text-align: center!important;
+  font-weight: bold;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,Liberation Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
+  font-size: 1rem;
+  line-height: 1.5;
+}
+
+.tabla-articulos-body-row1 {
+  background-color: rgba(0,0,0,.05);
+}
+
+.tabla-articulos-body-cell {
+  border: 1px solid #dee2e6;
+  padding: 0.3rem;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,Liberation Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+/* Grilla */
+.grilla-cell{
+  background-color: rgba(86,61,124,0.15);
+  border: 1px solid rgba(86,61,124,0.2);
+  text-align: center;
+}
+
+#container-grilla {
+  border: none;
 }
